data/derived/comb/progs/unify/prog6404.ml.out
Characters 59-69:
  | xf:: xb -> xf + sumList xb;;
                    ^^^^^^^^^^
Error: This expression has type int list -> int
       but an expression was expected of type int
